--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.17",
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "graphql": "^16.0.1",
     "next": "12.0.4",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
