--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ yarn-error.log*
 
 # DELETE THIS IF API FOLDER CONTAINS SOMETHING USEFUL
 /pages/api
+/pages/api/email
+/pages/api/mailRequest
+/pages/api/strapi
