--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
@@ -16,7 +17,8 @@
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^7.1.1"
+    "react-markdown": "^7.1.1",
+    "sanitize-html": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
