--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.1.1",
-    "sanitize-html": "^2.7.0"
+    "sanitize-html": "^2.7.0",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "eslint": "7.32.0",
