--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "nextjs-portfolio",
+  "name": "portfolio-2023",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,26 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.6.0",
-    "axios": "^0.24.0",
-    "dotenv": "^10.0.0",
-    "graphql": "^16.0.1",
-    "next": "12.0.4",
-    "node-sass": "^6.0.1",
-    "nodemailer": "^6.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "^7.1.1",
-    "sanitize-html": "^2.7.0",
-    "swiper": "^8.4.6"
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
-    "gulp": "^4.0.2",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.0.0",
-    "gulp-uglifycss": "^1.1.0",
-    "sass": "^1.43.4"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
