--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
