--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "devicon": "^2.15.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
